bin_PROGRAMS = ch-rfs
ch_rfs_SOURCES = dimutex_algo.c \
							dimutex_algo_resource_task.c \
							dimutex_node_setup.c \
							dimutex_node_utils.c \
							main.c \
							dimutex_algo_messaging_task.c \
							dimutex.c \
							dimutex_node_task.c \
							dimutex_send_msg.c \
							dimutex_send_algo_msg.c \
							dimutex_send_server_msg.c \
							dimutex_node_stats.c

